--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Damascus 1348: Plague Simulator</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lato:wght@400;700&family=Source+Serif+4:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
       body { margin: 0; padding: 0; overflow: hidden; background-color: #000; font-family: 'Lato', sans-serif; }
       h1, h2, h3, .historical-font { font-family: 'Cinzel', serif; }
